--- a/src/css/videoFlags.css
+++ b/src/css/videoFlags.css
@@ -10,7 +10,7 @@
 }
 
 .promo-video-card::after {
-  content: "" !important;
+  content: '' !important;
   position: absolute !important;
   top: 0 !important;
   left: 0 !important;
