--- a/src/css/productFlags.css
+++ b/src/css/productFlags.css
@@ -1,10 +1,10 @@
-.labeled-item,
+/* .labeled-item,
 .labeled-product,
-.selected-product-cards,
-.flagged-bought-together {
-  padding: 5px;
-  border-radius: 10px !important;
-  border: 1px solid var(--flagged-item-brgb(255, 0, 0), #dd0f0f) !important;
+.selected-product-cards, */
+/* .flagged-bought-together */
+.flagged-product {
+  border-radius: 8px !important;
+  border: 1px solid var(--flagged-item-box-shadow, #ff0000) !important;
   box-shadow: var(--flagged-item-box-shadow, 1px 1px 1px 1px) !important;
 }
 
@@ -13,9 +13,18 @@
   box-shadow: inset var(--flagged-item-box-shadow, 0px 0px 5px 2px) !important;
 }
 
-.flagged-product-store {
-  border-radius: 5px !important;
-  padding: 1px 4px !important;
-  color: red !important;
-  font-weight: bold !important;
+.flagged-shelf {
+  padding: 24px !important;
+  border-radius: 8px !important;
+  border: 1px solid var(--flagged-item-box-shadow, #ff0000) !important;
+  box-shadow: var(--flagged-item-box-shadow, 1px 1px 1px 1px) !important;
+  background-color: var(--flagged-item-background, #ffcccc) !important;
+}
+
+.flagged-sponsorship {
+  padding: 24px !important;
+  border-radius: 8px !important;
+  border: 1px solid var(--flagged-item-box-shadow, #ff0000) !important;
+  box-shadow: var(--flagged-item-box-shadow, 1px 1px 1px 1px) !important;
+  background-color: var(#ffcccc) !important;
 }
