--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,6 +97,18 @@ html.dark-mode {
   animation: highlight-out 0.5s ease-out forwards;
 }
 
+.dark-mode .lowest-price-store-highlight {
+  border: 3px solid #58a054 !important;
+  background-color: #2d572d !important;
+  box-shadow: 0px 2px 4px rgba(255, 255, 255, 0.3) !important;
+  transition: all 0.3s ease-in-out !important;
+  animation: dark-highlight-in 0.5s ease-in forwards;
+}
+
+.dark-mode .lowest-price-store-highlight.is-out {
+  animation: dark-highlight-out 0.5s ease-out forwards;
+}
+
 @keyframes highlight-in {
   from {
     opacity: 0;
@@ -117,17 +129,6 @@ html.dark-mode {
     opacity: 0;
     transform: translateY(10px);
   }
-}
-
-.dark-mode .lowest-price-store-highlight {
-  border: 3px solid #58a054 !important;
-  box-shadow: 0px 2px 4px rgba(255, 255, 255, 0.3) !important;
-  transition: all 0.3s ease-in-out !important;
-  animation: dark-highlight-in 0.5s ease-in forwards;
-}
-
-.dark-mode .lowest-price-store-highlight.is-out {
-  animation: dark-highlight-out 0.5s ease-out forwards;
 }
 
 @keyframes dark-highlight-in {
@@ -165,6 +166,7 @@ html.dark-mode {
 .dark-mode .remain-sticky,
 .dark-mode .country-picker-form,
 .dark-mode .modal-container-content,
+.dark-mode .js-global-skrp-messages,
 .dark-mode .pic {
   background-color: var(--color-background-base) !important;
   color: var(--color-text-primary) !important;
@@ -910,7 +912,16 @@ text-black {
 }
 
 .dark-mode .merchant-coupon-offering-label-content {
-  color: #b0b0b0 !important;
+  color: #000000 !important;
+}
+
+.dark-mode .price-drop-offering-label-title {
+  color: #000000 !important;
+  background-color: #ffb800 !important;
+}
+
+.dark-mode .price-drop-offering-label {
+  background-color: #b49953 !important;
 }
 
 .dark-mode .merchant-coupon-offering-label-expiration {
